2007-10-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-ui-utils.c:
	* libempathy-gtk/empathy-ui-utils.h:
	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-contact-widget.h:
	* libempathy-gtk/empathy-avatar-chooser.c:
	* libempathy-gtk/empathy-avatar-chooser.h:
	* libempathy-gtk/empathy-avatar-image.c:
	* libempathy-gtk/empathy-avatar-image.h:
	* libempathy-gtk/Makefile.am:
	* src/empathy.c: Implement EmpathyAvatarChooser and EmpathyAvatarImage
	and make use of them in contact information windows. That means we can
	now enlarge avatars when clicking on it and we can set our own avatar if
	we edit our own contact.

2007-10-03  Marco Barisione  <marco@barisione.org>

	* libempathy/empathy-contact-factory.c:
	* libempathy/empathy-tp-call.c:
	* libempathy/empathy-tp-group.c:
	* libempathy/empathy-utils.c: Initialize every GError to NULL. Fixes
	bug #482889.

2007-10-02  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-contact-list.c: Add back protocol group.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c: Add a #ifdef HAVE_VOIP.
	Fixes bug #482190 (Marco Barisione).

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* data/Makefile.am:
	* data/empathy.desktop.in.in: Use fd.o standard location for autostart
	desktop files. Fixes bug #481860 (Stephane Loeuillet).

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.15.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/Makefile.am: Add tp-stream-engine.xml to EXTRA_DIST.
	* po/POTFILES.in: Add empathy-call-window.glade.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac:
	* NEWS: Update before release.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-private-chat.c: Fix refcounting of
	priv->factory. Fixes bug #473116.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>
